syntax = "proto3";

package user.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/0x726f6f6b6965/follow/protos/user/v1;v1";


service UserService {
    // CreateUser: create a user.
    rpc CreateUser (CreateUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}